# torrent-creator

./: LICENSE  README.md  change-log.txt  gitignore  main.py  pyproject.toml  torrent-creator-beta.py  torrent-creator.py
.github/workflows/: publish.yml  release.yml
