[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "torrent-creator"
version = "1.3.0"
description = "Simple torrent creator"
authors = [
  { name="ItzRealBeluga" }
]
readme = "README.md"
requires-python = ">=3.8"

[project.scripts]
torrent-creator = "torrent_creator.main:main"